# NeuralFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  load_test.py  mypy.ini  pyproject.toml  ruff.toml  worker.py
.github/workflows/: ci.yml
app/: config.py  config_manager.py  main.py
app/agents/: react.py
app/api/: __init__.py  streaming.py
app/core/: context.py  intent_router.py  llm.py  router.py  token_budget.py
app/memory/: base.py  long_term.py  summarizer.py  vector_retriever.py  working.py
app/middleware/: __init__.py  telemetry.py  tenant_isolation.py
app/models/: __init__.py  tenant.py
app/plugins/: __init__.py  manager.py
app/skills/: mcp_client.py  registry.py
app/utils/: observability.py  redis_client.py  vector_client.py
data/: sft_data.jsonl
scripts/eval/: evaluator.py  test_cases.json
scripts/finetune/: lora_train.py
src/neuralflow/: __init__.py
tests/: test_admin_config.py  test_archive_pipeline.py  test_config_manager.py  test_context_builder.py  test_deployment_files.py  test_engineering_guardrails.py  test_intent_router.py  test_llm_client.py  test_long_term_memory.py  test_mcp_client.py  test_observability.py  test_offline_fallback.py  test_plugins.py  test_settings.py  test_skills.py  test_streaming.py  test_summarizer_worker.py  test_telemetry.py  test_tenant_isolation.py  test_token_budget.py  test_vector_retriever.py  test_working_memory.py
