[project]
name = "neuralflow"
version = "0.1.0"
description = "NeuralFlow agent framework with layered memory, intent routing, and async summarization."
readme = "README.md"
authors = [
    { name = "caisiying", email = "csypeal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "litellm>=1.83.7",
    "prometheus-client>=0.22.1,<1.0.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
neuralflow = "neuralflow:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
